--- a/css/blog_css.css
+++ b/css/blog_css.css
@@ -21,3 +21,14 @@ form#blog_editor textarea, form#editor input[type="text"]{
 form#blog_editor textarea{
     height: 10em;
 }
+
+form#comment_form{
+    margin-top: 2em;
+    padding-top: 0.7em;
+    border-top: 1px solid grey;
+}
+
+form#comment_form label, form#comment_form input[type="submit"]{
+    padding-top: 0.7em;
+    display: block;
+}
